2005-08-30  Tommi Komulainen  <tommi.komulainen@nokia.com>

	* hildon-widgets/hildon-number-editor.c (button_event_id): GSource
	id's are unsigned and undefined at zero (instead of signed and -1)

2005-08-30  Tommi Komulainen  <tommi.komulainen@nokia.com>
	
	* hildon-widgets/hildon-time-editor.c (convert_to_12h): Removed a hack
	that was not working.  N#16805

2005-08-22  Tommi Komulainen  <tommi.komulainen@nokia.com>

	* configure.ac: Release 0.9.48

2005-08-22  Tommi Komulainen  <tommi.komulainen@nokia.com>

	* hildon-widgets/hildon-grid.c (hildon_grid_set_num_columns): Never
	allow area_rows to be 0 (ie. before widget is visible), otherwise the
	initial jump_scrollbar_to_focused() scrolls wrong.  N#17152

2005-08-22  Tommi Komulainen  <tommi.komulainen@nokia.com>

	* hildon-widgets/hildon-calendar-popup.c (hildon_calendar_popup_init):
	Do not override the week-start property of GtkCalendar according to
	the hildon-libs PO file, it is automatically determined from locale
	data.  N#12176

2005-08-17  Tommi Komulainen  <tommi.komulainen@nokia.com>

	* configure.ac: Release 0.9.47

2005-08-17  Tommi Komulainen  <tommi.komulainen@nokia.com>

	* hildon-widgets/hildon-get-password-dialog.c: Add "numbers_only"
	property for setting the password entry accept only numeric values.
	N#15212

2005-08-17  Tommi Komulainen  <tommi.komulainen@nokia.com>

	* hildon-widgets/hildon-calendar-popup.c (MAX_YEAR, MIN_YEAR):
	* hildon-widgets/hildon-note.c (ELLIPSATION_STRING, BOX_SPAXING):
	* hildon-widgets/hildon-volumebar-range.c (CHANGE_THRESHOLD):
	Use defines rather than magic numbers in the code.

2005-08-17  Tommi Komulainen  <tommi.komulainen@nokia.com>

	Update to new l10n packaging style.  po-files (inside this package)
	are not used for now, the message catalogs come from separate packages
	and including them here would conflict.

	* Makefile.am (SUBDIRS): stop including po-files
	* Makefile.am (EXTRA_DIST):
	* debian/hildon-libs-l10n-engb.install: