@@ -1,5 +1,12 @@
 2005-08-30  Tommi Komulainen  <tommi.komulainen@nokia.com>
 
+	* hildon-widgets/hildon-number-editor.c (add_select_all_idle,
+	hildon_number_editor_finalize, hildon_number_editor_entry_changed):
+	Save the id of the idle callback and remove it when the widget is
+	destroyed to avoid crashing.  N#18096
+
+2005-08-30  Tommi Komulainen  <tommi.komulainen@nokia.com>
+
 	* hildon-widgets/hildon-number-editor.c (button_event_id): GSource
 	id's are unsigned and undefined at zero (instead of signed and -1)
 
